# claude-chat-mcp

./: CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
src/: claude_backend.rs  main.rs  message_processor.rs  outgoing.rs  tool_schema.rs
